# zombies_and_humans_assignment

./: .gitignore  CMakeLists.txt  City.cpp  City.h  DirectionOffset.cpp  DirectionOffset.h  GameSpecification.cpp  GameSpecification.h  Human.cpp  Human.h  NoPositionAvailableException.cpp  NoPositionAvailableException.h  Organism.cpp  Organism.h  Position.cpp  Position.h  README.md  Space.cpp  Space.h  Zombie.cpp  Zombie.h  main.cpp
